# DuarteSAssuncao

./: README.md
DA/Proj 1/: CMakeLists.txt  Makefile  README.md  build.ninja
DA/Proj 1/doc/: Doxyfile  PRJ1.odp  PRJ1.pptx
DA/Proj 1/lib/: Edge.hpp  Graph.hpp  GraphException.hpp  Macros.hpp  Parser.hpp  Runtime.hpp  Tests.hpp  Vertex.hpp
DA/Proj 1/src/: Edge.cpp  Graph.cpp  Makefile  Parser.cpp  Runtime.cpp  Tests.cpp  Vertex.cpp  main.cpp
DA/Proj 2/: CMakeLists.txt  Makefile  README.md  build.ninja
DA/Proj 2/csv/: load_commands.txt
DA/Proj 2/doc/: Doxyfile  PRJ2.odp  PRJ2.pptx
DA/Proj 2/lib/: Auxil.hpp  Edge.hpp  Graph.hpp  Macros.hpp  MutablePriorityQueue.hpp  Parser.hpp  Runtime.hpp  Tests.hpp  Vertex.hpp
DA/Proj 2/src/: Auxil.cpp  Edge.cpp  Graph.cpp  Makefile  Parser.cpp  Runtime.cpp  Tests.cpp  Vertex.cpp  main.cpp
LC/proj/: Doxyfile  Makefile
LC/proj/src/app/: app_keyboard.c  app_keyboard.h  app_mouse.c  app_mouse.h  app_rtc.c  app_rtc.h  app_serial_port.c  app_serial_port.h  app_timer.c  app_timer.h  directories.c  directories.h  file_explorer.c  file_explorer.h  main.c  proj.c  setup.c  setup.h  shared.c  shared.h  window.c  window.h
LC/proj/src/auxiliary/: ansi_colors.h  debug.c  debug.h  extra_utils.h  forker.c  utils.c  vector.c  vector.h
LC/proj/src/graphics/: color.c  color.h  graphics.c  graphics.h  icons.h  letters.c  letters.h  sprite.c  sprite.h  vbe.h  vbe_modes.h
LC/proj/src/interrupts/: interrupts.c  interrupts.h  kbc_i8042.c  kbc_i8042.h  keyboard.c  keyboard.h  mouse.c  mouse.h  scancodes.c  (+4 more)
Prog/scripts/: Projects.lnk
(+33 files in other folders)
